--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,10 @@
         <module>modules/samples</module>
         <module>modules/features</module>
         <module>modules/p2-profile-gen</module>
-        <module>modules/distribution</module>
         <module>modules/org.wso2.stratos.cep.login.ui</module>
         <module>modules/org.wso2.stratos.cep.dashboard.ui</module>
+        <module>modules/org.wso2.cep.storm.dependencies</module>
+        <module>modules/distribution</module>
         <module>modules/integration</module>
     </modules>
 
