--- a/pom.xml
+++ b/pom.xml
@@ -663,7 +663,7 @@
         <carbon.multitenancy.version>4.4.1</carbon.multitenancy.version>
         <!--<carbon.governance.version>4.5.2</carbon.governance.version>-->
 
-        <siddhi.version>3.0.0-SNAPSHOT</siddhi.version>
+        <siddhi.version>3.0.0</siddhi.version>
         <cep.version>4.0.0-SNAPSHOT</cep.version>
         <carbon.event-processing.version>2.0.4-SNAPSHOT</carbon.event-processing.version>
 
