--- a/modules/samples/producers/http-performance/build.xml
+++ b/modules/samples/producers/http-performance/build.xml
@@ -26,10 +26,10 @@
     <property name="username" value="admin"/>
     <property name="password" value="admin"/>
 
-    <property name="url" value=""/>
-    <property name="noOfEvents" value=""/>
-    <property name="elapsedCount" value=""/>
-    <property name="noOfPublishers" value=""/>
+    <property name="url" value="http://localhost:9763/endpoints/httpReceiver"/>
+    <property name="eventCount" value="100000"/>
+    <property name="elapsedCount" value="10000"/>
+    <property name="noOfPublishers" value="5"/>
 
     <path id="javac.classpath">
         <pathelement path="${class.dir}"/>
@@ -80,14 +80,14 @@
     </target>
 
     <target name="run" depends="compile">
-        <echo> Configure -Durl=xxxx and -DnoOfEvents=xxxx -DelapsedCount=xxxx -DnoOfPublishers=xxxx -Doptionally use -Dusername=xxxx
+        <echo> Configure -Durl=xxxx and -DeventCount=xxxx -DelapsedCount=xxxx -DnoOfPublishers=xxxx -Doptionally use -Dusername=xxxx
             -Dpassword=xxxx </echo>
         <java classname="${main-class}"
               classpathref="javac.classpath" fork="true">
             <arg value="${url}"/>
             <arg value="${username}"/>
             <arg value="${password}"/>
-            <arg value="${noOfEvents}"/>
+            <arg value="${eventCount}"/>
             <arg value="${elapsedCount}"/>
             <arg value="${noOfPublishers}"/>
         </java>
