--- a/modules/org.wso2.cep.storm.dependencies/pom.xml
+++ b/modules/org.wso2.cep.storm.dependencies/pom.xml
@@ -308,7 +308,7 @@
         <carbon.kernel.version>4.4.1</carbon.kernel.version>
 
         <!-- Carbon component dependency versions -->
-        <carbon.analytics.common.version>5.0.0-SNAPSHOT</carbon.analytics.common.version>
+        <carbon.analytics.common.version>5.0.0</carbon.analytics.common.version>
         <!--<carbon.ml.version>1.0.1-SNAPSHOT</carbon.ml.version>-->
 
         <!--CEP versions-->
