--- a/modules/samples/consumers/pom.xml
+++ b/modules/samples/consumers/pom.xml
@@ -67,7 +67,7 @@
                                     <artifactId>org.wso2.carbon.event.output.adapter.ui.test</artifactId>
                                     <version>${carbon.analytics-common.version}</version>
                                     <type>war</type>
-                                    <destFileName>outputuitest.war</destFileName>
+                                    <destFileName>outputuiapp.war</destFileName>
                                 </artifactItem>
                             </artifactItems>
                             <outputDirectory>../../target/output-ui-test</outputDirectory>
