--- a/pom.xml
+++ b/pom.xml
@@ -648,6 +648,13 @@
         <system>JIRA</system>
         <url>https://wso2.org/jira/browse/CEP</url>
     </issueManagement>
+	
+    <repositories>
+    	<repository>
+            <id>analytics-common-5.0.0-repo</id>
+            <url>http://maven.wso2.org/nexus/content/repositories/orgwso2carbonanalytics-common-057/</url>
+        </repository>
+    </repositories>
 
     <properties>
         <!--CEP versions-->
@@ -655,7 +662,7 @@
         <jaggery.modules.version>1.3.0</jaggery.modules.version>
         <carbon.deployment.version>4.4.1</carbon.deployment.version>
         <carbon.commons.version>4.4.4</carbon.commons.version>
-        <carbon.analytics-common.version>5.0.0-SNAPSHOT</carbon.analytics-common.version>
+        <carbon.analytics-common.version>5.0.0</carbon.analytics-common.version>
         <carbon.dashboards.version>1.0.1-SNAPSHOT</carbon.dashboards.version>
         <carbon.identity.version>4.5.4</carbon.identity.version>
         <carbon.registry.version>4.4.5</carbon.registry.version>
