Adding quotes to wso2server.sh; Fixing identity feature listing issue

--- a/modules/distribution/pom.xml
+++ b/modules/distribution/pom.xml
@@ -149,6 +149,17 @@
                                         file="target/wso2carbon-core-${carbon.kernel.version}/repository/conf/user-mgt.xml"
                                         token="&lt;Property name=&quot;GetAllRolesOfUserEnabled&quot;&gt;true&lt;/Property&gt;"
                                         value="&lt;!--Property name=&quot;GetAllRolesOfUserEnabled&quot;&gt;true&lt;/Property--&gt;"/>
+                                <!-- Moving identity features downwards in management console UI -->
+                                <property name="tempdir2" value="target/identity-ui"/>
+                                <mkdir dir="${tempdir2}"/>
+                                <unzip src="target/wso2carbon-core-${carbon.kernel.version}/repository/components/plugins/org.wso2.carbon.identity.account.mgt.menu.ui_${carbon.identity.version}.jar"
+                                       dest="${tempdir2}"/>
+                                <replace
+                                        file="${tempdir2}/META-INF/component.xml"
+                                        token="&lt;parent-menu&gt;identity_menu&lt;/parent-menu&gt;"
+                                        value="&lt;parent-menu&gt;configure_menu&lt;/parent-menu&gt;"/>
+                                <zip destfile="target/wso2carbon-core-${carbon.kernel.version}/repository/components/plugins/org.wso2.carbon.identity.account.mgt.menu.ui_${carbon.identity.version}.jar"
+                                     basedir="${tempdir2}"/>
                             </target>
                         </configuration>
                     </execution>
@@ -263,6 +274,7 @@
                                 <delete dir="target/sources" />
                                 <delete dir="target/antrun/" />
                                 <delete dir="target/site" />
+                                <delete dir="target/identity-ui"/>
                             </target>
                         </configuration>
                         <goals>
