Changing logger to use apache commons logging

--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,11 @@
                 <artifactId>org.wso2.carbon.registry.core</artifactId>
                 <version>${carbon.kernel.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon</groupId>
+                <artifactId>org.wso2.carbon.logging</artifactId>
+                <version>${carbon.kernel.version}</version>
+            </dependency>
 
             <!--Carbon orbit-->
             <dependency>
