--- a/modules/samples/extensions/geo-event-fuser/pom.xml
+++ b/modules/samples/extensions/geo-event-fuser/pom.xml
@@ -26,9 +26,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-            <version>1.1.1</version>
+            <groupId>org.wso2.carbon</groupId>
+            <artifactId>org.wso2.carbon.logging</artifactId>
         </dependency>
     </dependencies>
 
