--- a/modules/samples/producers/http/pom.xml
+++ b/modules/samples/producers/http/pom.xml
@@ -42,8 +42,8 @@
             <artifactId>httpcore</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.log4j.wso2</groupId>
-            <artifactId>log4j</artifactId>
+            <groupId>org.wso2.carbon</groupId>
+            <artifactId>org.wso2.carbon.logging</artifactId>
         </dependency>
     </dependencies>
 
