--- a/modules/samples/consumers/jms/pom.xml
+++ b/modules/samples/consumers/jms/pom.xml
@@ -34,8 +34,8 @@
             <artifactId>geronimo-jms_1.1_spec</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.log4j.wso2</groupId>
-            <artifactId>log4j</artifactId>
+            <groupId>org.wso2.carbon</groupId>
+            <artifactId>org.wso2.carbon.logging</artifactId>
         </dependency>
     </dependencies>
 </project>
