--- a/modules/samples/producers/kafka-performance/pom.xml
+++ b/modules/samples/producers/kafka-performance/pom.xml
@@ -30,8 +30,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.log4j.wso2</groupId>
-            <artifactId>log4j</artifactId>
+            <groupId>org.wso2.carbon</groupId>
+            <artifactId>org.wso2.carbon.logging</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
