--- a/modules/samples/producers/kafka/pom.xml
+++ b/modules/samples/producers/kafka/pom.xml
@@ -31,6 +31,10 @@
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka_2.10</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon</groupId>
+            <artifactId>org.wso2.carbon.logging</artifactId>
+        </dependency>
     </dependencies>
 
     <repositories>
