--- a/modules/samples/producers/mqtt/pom.xml
+++ b/modules/samples/producers/mqtt/pom.xml
@@ -32,8 +32,8 @@
             <artifactId>mqtt-client</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.log4j.wso2</groupId>
-            <artifactId>log4j</artifactId>
+            <groupId>org.wso2.carbon</groupId>
+            <artifactId>org.wso2.carbon.logging</artifactId>
         </dependency>
     </dependencies>
 
