Fixing a code formatting issues.

--- a/modules/samples/consumers/websocket/build.xml
+++ b/modules/samples/consumers/websocket/build.xml
@@ -63,8 +63,10 @@
     </target>
 
     <target name="run" depends="compile">
-        <echo> For server mode, configure -Dhost='server host' (optional), -Dport='server port' (optional)</echo>
-        <echo> For client mode, configure -Durl='server url'</echo>
+        <echo>For server mode, configure -Dhost='server host' (optional), -Dport='server port'
+            (optional)
+        </echo>
+        <echo>For client mode, configure -Durl='server url'</echo>
         <java classname="${main-class}" fork="true"
               classpathref="javac.classpath">
             <arg value="${host}"/>
