--- a/modules/samples/producers/websocket/build.xml
+++ b/modules/samples/producers/websocket/build.xml
@@ -65,8 +65,12 @@
     </target>
 
     <target name="run" depends="compile">
-        <echo> For server mode, configure -Dsn='sample number' or -DfilePath=xxxx, -Dhost='host' (optional), -Dport='server port' (optional)</echo>
-        <echo> For client mode, configure -Durl='server url', -Dsn='sample number' or -DfilePath=xxxx</echo>
+        <echo>For server mode, configure -Dsn='sample number' or -DfilePath=xxxx, -Dhost='host'
+            (optional), -Dport='server port' (optional)
+        </echo>
+        <echo>For client mode, configure -Durl='server url', -Dsn='sample number' or
+            -DfilePath=xxxx
+        </echo>
         <java classname="${main-class}" fork="true"
               classpathref="javac.classpath">
             <arg value="${port}"/>
