--- a/modules/p2-profile-gen/pom.xml
+++ b/modules/p2-profile-gen/pom.xml
@@ -853,7 +853,7 @@
                                 <!-- depsync related features -->
                                 <feature>
                                     <id>
-                                        org.wso2.carbon.deployment.synchronizer.server.feature.group
+                                        org.wso2.carbon.deployment.synchronizer.feature.group
                                     </id>
                                     <version>${carbon.commons.version}</version>
                                 </feature>
