--- a/pom.xml
+++ b/pom.xml
@@ -659,9 +659,8 @@
         <carbon.dashboards.version>1.0.1-SNAPSHOT</carbon.dashboards.version>
         <carbon.identity.version>4.5.6</carbon.identity.version>
         <carbon.registry.version>4.4.6</carbon.registry.version>
-        <!--<carbon.storagemgt.version>4.3.1-SNAPSHOT</carbon.storagemgt.version>-->
         <carbon.multitenancy.version>4.4.3</carbon.multitenancy.version>
-        <!--<carbon.governance.version>4.5.2</carbon.governance.version>-->
+        <carbon.metrics.version>1.1.0</carbon.metrics.version>
 
         <siddhi.version>3.0.0</siddhi.version>
         <cep.version>4.0.0-SNAPSHOT</cep.version>
