--- a/modules/samples/utils/storm-dependencies-jar/pom.xml
+++ b/modules/samples/utils/storm-dependencies-jar/pom.xml
@@ -438,7 +438,7 @@
         <carbon.ml.version>1.0.1-SNAPSHOT</carbon.ml.version>
 
         <!--CEP versions-->
-        <siddhi.version>3.0.0</siddhi.version>
+        <siddhi.version>3.0.1-SNAPSHOT</siddhi.version>
         <carbon.event.processing.version>2.0.4-SNAPSHOT</carbon.event.processing.version>
 
         <!-- Third party dependencies -->
