--- a/pom.xml
+++ b/pom.xml
@@ -662,7 +662,7 @@
         <carbon.multitenancy.version>4.4.3</carbon.multitenancy.version>
         <carbon.metrics.version>1.1.0</carbon.metrics.version>
 
-        <siddhi.version>3.0.0</siddhi.version>
+        <siddhi.version>3.0.1-SNAPSHOT</siddhi.version>
         <cep.version>4.0.0-SNAPSHOT</cep.version>
         <carbon.event-processing.version>2.0.4-SNAPSHOT</carbon.event-processing.version>
 
