--- a/modules/integration/tests-integration/tests/pom.xml
+++ b/modules/integration/tests-integration/tests/pom.xml
@@ -405,7 +405,7 @@
             <artifactId>testng</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.httpcomponents.wso2</groupId>
+            <groupId>org.wso2.orbit.org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
         <dependency>
