--- a/pom.xml
+++ b/pom.xml
@@ -698,16 +698,16 @@
         <jaggery.modules.version>1.4.2</jaggery.modules.version>
         <carbon.deployment.version>4.5.3</carbon.deployment.version>
         <carbon.commons.version>4.4.7</carbon.commons.version>
-        <carbon.analytics-common.version>5.0.1-SNAPSHOT</carbon.analytics-common.version>
-        <carbon.dashboards.version>1.0.1-SNAPSHOT</carbon.dashboards.version>
+        <carbon.analytics-common.version>5.0.1</carbon.analytics-common.version>
+        <carbon.dashboards.version>1.0.1</carbon.dashboards.version>
         <carbon.identity.version>4.5.6</carbon.identity.version>
         <carbon.registry.version>4.4.6</carbon.registry.version>
         <carbon.multitenancy.version>4.4.3</carbon.multitenancy.version>
         <carbon.metrics.version>1.1.0</carbon.metrics.version>
 
-        <siddhi.version>3.0.1-SNAPSHOT</siddhi.version>
+        <siddhi.version>3.0.1</siddhi.version>
         <cep.version>4.0.0-SNAPSHOT</cep.version>
-        <carbon.event-processing.version>2.0.4-SNAPSHOT</carbon.event-processing.version>
+        <carbon.event-processing.version>2.0.4</carbon.event-processing.version>
 
         <!-- Carbon kernel version-->
         <carbon.kernel.version>4.4.1</carbon.kernel.version>
