--- a/modules/distribution/pom.xml
+++ b/modules/distribution/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.wso2.cep</groupId>
         <artifactId>wso2cep-parent</artifactId>
-        <version>4.0.0-SNAPSHOT</version>
+        <version>4.0.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -143,12 +143,8 @@
                             <target>
                                 <!-- commenting "GetAllRolesOfUserEnabled" property to fix
                                 https://wso2.org/jira/browse/IDENTITY-3489 -->
-                                <echo
-                                        message="########### Comment out GetAllRolesOfUserEnabled property ##############"/>
-                                <replace
-                                        file="target/wso2carbon-core-${carbon.kernel.version}/repository/conf/user-mgt.xml"
-                                        token="&lt;Property name=&quot;GetAllRolesOfUserEnabled&quot;&gt;true&lt;/Property&gt;"
-                                        value="&lt;!--Property name=&quot;GetAllRolesOfUserEnabled&quot;&gt;true&lt;/Property--&gt;"/>
+                                <echo message="########### Comment out GetAllRolesOfUserEnabled property ##############" />
+                                <replace file="target/wso2carbon-core-${carbon.kernel.version}/repository/conf/user-mgt.xml" token="&lt;Property name=&quot;GetAllRolesOfUserEnabled&quot;&gt;true&lt;/Property&gt;" value="&lt;!--Property name=&quot;GetAllRolesOfUserEnabled&quot;&gt;true&lt;/Property--&gt;" />
                             </target>
                         </configuration>
                     </execution>
@@ -248,16 +244,11 @@
                                 </if>
                                 <delete dir="${tempdir}" />
                                 <!-- Moving identity features downwards in management console UI -->
-                                <property name="tempdir2" value="target/identity-ui"/>
-                                <mkdir dir="${tempdir2}"/>
-                                <unzip src="target/wso2carbon-core-${carbon.kernel.version}/repository/components/plugins/org.wso2.carbon.identity.account.mgt.menu.ui_${carbon.identity.version}.jar"
-                                       dest="${tempdir2}"/>
-                                <replace
-                                        file="${tempdir2}/META-INF/component.xml"
-                                        token="&lt;parent-menu&gt;identity_menu&lt;/parent-menu&gt;"
-                                        value="&lt;parent-menu&gt;configure_menu&lt;/parent-menu&gt;"/>
-                                <zip destfile="target/wso2carbon-core-${carbon.kernel.version}/repository/components/plugins/org.wso2.carbon.identity.account.mgt.menu.ui_${carbon.identity.version}.jar"
-                                     basedir="${tempdir2}"/>
+                                <property name="tempdir2" value="target/identity-ui" />
+                                <mkdir dir="${tempdir2}" />
+                                <unzip src="target/wso2carbon-core-${carbon.kernel.version}/repository/components/plugins/org.wso2.carbon.identity.account.mgt.menu.ui_${carbon.identity.version}.jar" dest="${tempdir2}" />
+                                <replace file="${tempdir2}/META-INF/component.xml" token="&lt;parent-menu&gt;identity_menu&lt;/parent-menu&gt;" value="&lt;parent-menu&gt;configure_menu&lt;/parent-menu&gt;" />
+                                <zip destfile="target/wso2carbon-core-${carbon.kernel.version}/repository/components/plugins/org.wso2.carbon.identity.account.mgt.menu.ui_${carbon.identity.version}.jar" basedir="${tempdir2}" />
                             </target>
                         </configuration>
                     </execution>
@@ -274,7 +265,7 @@
                                 <delete dir="target/sources" />
                                 <delete dir="target/antrun/" />
                                 <delete dir="target/site" />
-                                <delete dir="target/identity-ui"/>
+                                <delete dir="target/identity-ui" />
                             </target>
                         </configuration>
                         <goals>
