--- a/modules/samples/consumers/axis2-log-service/pom.xml
+++ b/modules/samples/consumers/axis2-log-service/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.wso2.cep</groupId>
         <artifactId>cep-samples-consumers</artifactId>
-        <version>4.0.0-SNAPSHOT</version>
+        <version>4.0.0</version>
     </parent>
     <artifactId>axis2-log-service</artifactId>
     <name>WSO2 CEP - Consumer - Axis2 Log Service</name>
