--- a/modules/features/product/org.wso2.cep.styles.feature/pom.xml
+++ b/modules/features/product/org.wso2.cep.styles.feature/pom.xml
@@ -20,12 +20,12 @@
     <parent>
         <groupId>org.wso2.cep</groupId>
         <artifactId>wso2cep-features</artifactId>
-        <version>4.0.0</version>
+        <version>4.0.1-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>org.wso2.cep.styles.feature</artifactId>
-    <version>4.0.0</version>
+    <version>4.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>WSO2 CEP - Styles Features</name>
     <url>http://wso2.org</url>
