--- a/modules/samples/producers/http/pom.xml
+++ b/modules/samples/producers/http/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <artifactId>cep-samples-producers</artifactId>
         <groupId>org.wso2.cep</groupId>
-        <version>4.0.1-SNAPSHOT</version>
+        <version>4.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
