--- a/modules/samples/consumers/generic-log-service/build.xml
+++ b/modules/samples/consumers/generic-log-service/build.xml
@@ -28,6 +28,7 @@
         <pathelement path="${class.dir}"/>
         <fileset dir="${cep.home}/repository/components/plugins/">
             <include name="tomcat-servlet-api_*.jar"/>
+            <include name="org.wso2.carbon.logging_*.jar"/>
         </fileset>
     </path>
 
