--- a/pom.xml
+++ b/pom.xml
@@ -699,7 +699,7 @@
         <carbon.deployment.version>4.5.3</carbon.deployment.version>
         <carbon.commons.version>4.4.7</carbon.commons.version>
         <carbon.analytics-common.version>5.0.1</carbon.analytics-common.version>
-        <carbon.dashboards.version>1.0.1-SNAPSHOT</carbon.dashboards.version>
+        <carbon.dashboards.version>1.0.1</carbon.dashboards.version>
         <carbon.identity.version>4.5.6</carbon.identity.version>
         <carbon.registry.version>4.4.6</carbon.registry.version>
         <carbon.multitenancy.version>4.4.3</carbon.multitenancy.version>
