Disabling debug logs and enabling info logs in web socket consumer

--- a/modules/samples/consumers/websocket/src/main/resources/log4j.properties
+++ b/modules/samples/consumers/websocket/src/main/resources/log4j.properties
@@ -6,7 +6,7 @@
 # in compliance with the License.
 # You may obtain a copy of the License at
 #
-# http://www.apache.org/licenses/LICENSE-2.0
+#     http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing,
 # software distributed under the License is distributed on an
@@ -26,8 +26,8 @@
 # priority in which case they inherit their priority from the
 # hierarchy.
 
-log4j.rootLogger=debug, console
-#log4j.rootLogger=info, console
+#log4j.rootLogger=debug, console
+log4j.rootLogger=info, console
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
