--- a/modules/samples/producers/tfl-feed/build.xml
+++ b/modules/samples/producers/tfl-feed/build.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-~ Copyright (c) 2015, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
-~
-~ Licensed under the Apache License, Version 2.0 (the "License");
-~ you may not use this file except in compliance with the License.
-~ You may obtain a copy of the License at
-~
-~     http://www.apache.org/licenses/LICENSE-2.0
-~
-~ Unless required by applicable law or agreed to in writing, software
-~ distributed under the License is distributed on an "AS IS" BASIS,
-~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-~ See the License for the specific language governing permissions and
-~ limitations under the License.
--->
+  ~ Copyright (c) 2015, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
+  ~
+  ~ WSO2 Inc. licenses this file to you under the Apache License,
+  ~ Version 2.0 (the "License"); you may not use this file except
+  ~ in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~     http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing,
+  ~ software distributed under the License is distributed on an
+  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+  ~ KIND, either express or implied.  See the License for the
+  ~ specific language governing permissions and limitations
+  ~ under the License.
+  -->
 <project name="dataagent" default="run">
 
     <property name="carbon.home" value="../../.."/>
@@ -27,9 +29,9 @@
         <pathelement path="${class.dir}"/>
         <fileset dir="${carbon.home}/repository/components/plugins/">
             <!--<include name="gt-geojson-13.0.0-wso2v1.jar"/>-->
-            <include name="httpcore_4.3.3.wso2v1.jar"/>
-            <include name="httpclient_4.2.5.wso2v1.jar"/>
-            <include name="commons-httpclient_3.1.0.wso2v2"/>
+            <include name="httpcore_*.jar"/>
+            <include name="httpclient_*.jar"/>
+            <include name="commons-httpclient_*.jar"/>
             <include name="org.wso2.carbon.logging_*.jar"/>
             <include name="slf4j.log4j12_*.jar"/>
             <include name="slf4j.api_*.jar"/>
