--- a/modules/samples/producers/websocket/src/main/resources/log4j.properties
+++ b/modules/samples/producers/websocket/src/main/resources/log4j.properties
@@ -26,8 +26,7 @@
 # priority in which case they inherit their priority from the
 # hierarchy.
 
-log4j.rootLogger=debug, console
-#log4j.rootLogger=info, console
+log4j.rootLogger=info, console
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
