Setting slf4j.api and slf4j.log4j12 versions specifically to 1.7.12

--- a/modules/samples/consumers/http-performance/build.xml
+++ b/modules/samples/consumers/http-performance/build.xml
@@ -29,8 +29,8 @@
         <fileset dir="${cep.home}/repository/components/plugins/">
             <include name="tomcat-servlet-api_*.jar"/>
             <include name="wsdl4j_*.jar"/>
-            <include name="slf4j.log4j12_*.jar"/>
-            <include name="slf4j.api_*.jar"/>
+            <include name="slf4j.log4j12_1.7.12.jar"/>
+            <include name="slf4j.api_1.7.12.jar"/>
             <include name="org.wso2.carbon.logging_*.jar"/>
             <include name="json_*.jar"/>
             <include name="com.jayway.jsonpath.json-path_*.jar"/>
