--- a/modules/samples/consumers/kafka-performance/build.xml
+++ b/modules/samples/consumers/kafka-performance/build.xml
@@ -39,8 +39,8 @@
         <fileset dir="${lib.dir}"/>
         <fileset dir="${carbon.home}/repository/components/plugins/">
             <include name="org.wso2.carbon.logging_*.jar"/>
-            <include name="slf4j.log4j12_*.jar"/>
-            <include name="slf4j.api_*.jar"/>
+            <include name="slf4j.log4j12_1.7.12.jar"/>
+            <include name="slf4j.api_1.7.12.jar"/>
         </fileset>
     </path>
 
