--- a/modules/samples/consumers/wso2-event-performance/build.xml
+++ b/modules/samples/consumers/wso2-event-performance/build.xml
@@ -38,8 +38,8 @@
             <include name="com.google.gson_*.jar"/>
             <include name="com.google.guava_*.jar"/>
             <include name="libthrift_*.jar"/>
-            <include name="slf4j.log4j*.jar"/>
-            <include name="slf4j.api_*.jar"/>
+            <include name="slf4j.log4j12_1.7.12.jar"/>
+            <include name="slf4j.api_1.7.12.jar"/>
             <include name="json_*.jar"/>
             <include name="org.wso2.carbon.databridge.commons.thrift_*.jar"/>
             <include name="org.wso2.carbon.databridge.commons.binary_*.jar"/>
