--- a/modules/samples/consumers/mqtt/build.xml
+++ b/modules/samples/consumers/mqtt/build.xml
@@ -33,8 +33,8 @@
         <pathelement path="${class.dir}"/>
         <fileset dir="${carbon.home}/repository/components/plugins/">
             <include name="org.wso2.carbon.logging_*.jar"/>
-            <include name="slf4j.log4j12_*.jar"/>
-            <include name="slf4j.api_*.jar"/>
+            <include name="slf4j.log4j12_1.7.12.jar"/>
+            <include name="slf4j.api_1.7.12.jar"/>
             <include name="json_*.jar"/>
         </fileset>
         <fileset dir="${lib.dir}"/>
