--- a/modules/samples/producers/geo-feed/build.xml
+++ b/modules/samples/producers/geo-feed/build.xml
@@ -18,8 +18,8 @@
             <include name="httpclient_*.jar"/>
 			<include name="httpcore_*.jar"/>
             <include name="libthrift_*.jar"/>
-            <include name="slf4j.log4j12_*.jar"/>
-            <include name="slf4j.api_*.jar"/>
+            <include name="slf4j.log4j12_1.7.12.jar"/>
+            <include name="slf4j.api_1.7.12.jar"/>
         </fileset>
     </path>
 
