[maven-release-plugin] prepare release v4.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <groupId>org.wso2.cep</groupId>
     <artifactId>wso2cep-parent</artifactId>
     <packaging>pom</packaging>
-    <version>4.0.1-SNAPSHOT</version>
+    <version>4.0.0</version>
     <name>WSO2 CEP - Parent</name>
     <url>http://wso2.com/products/complex-event-processor/</url>
     <description>WSO2 Complex Event Processor</description>
@@ -547,7 +547,7 @@
         <url>https://github.com/wso2/product-cep.git</url>
         <developerConnection>scm:git:https://github.com/wso2/product-cep.git</developerConnection>
         <connection>scm:git:https://github.com/wso2/product-cep.git</connection>
-        <tag>HEAD</tag>
+        <tag>v4.0.0</tag>
     </scm>
     <!--build>
         <plugins>
@@ -707,7 +707,7 @@
 
         <siddhi.version>3.0.1</siddhi.version>
         <carbon.event-processing.version>2.0.5</carbon.event-processing.version>
-        <cep.version>4.0.1-SNAPSHOT</cep.version>
+        <cep.version>4.0.0</cep.version>
         
         <!-- Carbon kernel version-->
         <carbon.kernel.version>4.4.1</carbon.kernel.version>
